Fix footer spacing

--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -275,25 +275,38 @@ p[data-width="width"] {
   'logo-social';
 }
 
-@media (min-width:50em) {
-  .primary-footer-wrapper {
-    grid-template-areas: 'logo-social nav form';
-  }
-}
 
-.primary-footer-wrapper > :nth-child(1) {
+
+.primary-footer-logo-social {
   grid-area: logo-social;
+
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  gap: var(--size-700);
+
   
 }
 
-.primary-footer-wrapper > :nth-child(2) {
+.primary-footer-nav {
   grid-area: nav;
  
 }
 
-.primary-footer-wrapper > :nth-child(3) {
+.primary-footer-form {
   grid-area: form;
  
+}
+
+@media (min-width:50em) {
+  .primary-footer-wrapper {
+    grid-template-areas: 'logo-social nav form';
+  }
+  .primary-footer-logo-social {
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: var(--size-700);
+  }
 }
 
 @media(max-width: 50em) {
@@ -301,6 +314,7 @@ p[data-width="width"] {
 
     margin-inline: auto;
   }
+  
 }
 
 
@@ -310,7 +324,9 @@ p[data-width="width"] {
 
 .footer-nav {
   columns: 2;
+  gap: max(30vw, 2rem);
 }
+
 .footer-nav a {
 color: var(--clr-neutral-100);
 text-decoration: none;
